--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         </li>
         <li class="collection-item">
           <p>
-            <a href="public/views/css/homework-1">CSS homework 1</a>
+            <a href="css/homework-1">CSS homework 1</a>
           </p>
         </li>
         <li>
           <p>
-            <a href="public/view/css/homework-2">CSS homework 2</a>
+            <a href="homework-2">CSS homework 2</a>
           </p>
         </li>
         <li>
           <p>
-            <a href="public/view/css/homework-3">CSS homework 3</a>
+            <a href="homework-3">CSS homework 3</a>
           </p>
         </li>
       </ul>
