--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
         </li>
         <li>
           <p>
-            <a href="homework-2">CSS homework 2</a>
+            <a href="css/homework-2">CSS homework 2</a>
           </p>
         </li>
         <li>
           <p>
-            <a href="homework-3">CSS homework 3</a>
+            <a href="css/homework-3">CSS homework 3</a>
+          </p>
+        </li>
+        <li>
+          <p>
+            <a href="css/homework-4">CSS homework 4</a>
           </p>
         </li>
       </ul>
