--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             <a href="css/homework-4">CSS homework 4</a>
           </p>
         </li>
+        <li>
+          <p>
+            <a href="css/homework-5">CSS homework 5</a>
+          </p>
+        </li>
       </ul>
     </div>
     
