--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
             <a href="css/homework-5">CSS homework 5</a>
           </p>
         </li>
+        <li>
+          <p>
+            <a href="css/homework-6">CSS homework 6</a>
+          </p>
+        </li>
       </ul>
     </div>
     
