--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
             <a href="css/homework-6">CSS homework 6</a>
           </p>
         </li>
+        <li>
+          <p>
+            <a href="js/homework-1">Js homework 1</a>
+          </p>
+        </li>
+        <li>
+          <p>
+            <a href="js/homework-2">Js homework 2</a>
+          </p>
+        </li>
       </ul>
     </div>
     
