--- a/index.html
+++ b/index.html
@@ -53,6 +53,21 @@
             <a href="js/homework-2">Js homework 2</a>
           </p>
         </li>
+        <li>
+          <p>
+            <a href="js/homework-3">Js homework 3</a>
+          </p>
+        </li>
+        <li>
+          <p>
+            <a href="js/homework-4">Js homework 4</a>
+          </p>
+        </li>
+        <li>
+          <p>
+            <a href="js/homework-5">Js homework 5</a>
+          </p>
+        </li>
       </ul>
     </div>
     
